--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -66,7 +66,8 @@ lazy_static.workspace = true
 auto_impl.workspace = true
 dotenv.workspace = true
 
-
+[dev-dependencies]
+serial_test.workspace = true
 
 [build-dependencies]
 tokio.workspace = true
