--- a/crates/brontes-classifier/Cargo.toml
+++ b/crates/brontes-classifier/Cargo.toml
@@ -40,6 +40,7 @@ brontes-core = { workspace = true, optional = true }
 
 
 [features]
+default = []
 test_run = ["brontes-database/test_run", "server"]
 tests = ["reth-tracing", "brontes-core"]
 server = []
