--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -15,7 +15,7 @@ tracing.workspace = true
 
 # async
 rayon.workspace = true
-tokio = { workspace = true, features = ["full"], optional = true }
+tokio = { workspace = true, features = ["full"] }
 
 # numbers
 malachite = { workspace = true, features = ["enable_serde"] }
@@ -65,4 +65,4 @@ reth-tracing.workspace = true
 [features]
 default = []
 server = []
-tests = ["tokio/full"]
+tests = []
