--- a/crates/brontes-inspect/Cargo.toml
+++ b/crates/brontes-inspect/Cargo.toml
@@ -54,7 +54,7 @@ dotenv.workspace = true
 serial_test.workspace = true
 brontes-classifier = { workspace = true, features = ["tests"] }
 brontes-core = { workspace = true, features = ["tests"] }
-
+tracing-subscriber.workspace = true
 
 [features]
 test_run = ["brontes-database/test_run"]
