--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@ target/
 build_error.txt
 failed_abis.txt
 
+
 # Remove Cargo.lock from gitignore if creating an executable, leave it for libraries
 # More information here https://doc.rust-lang.org/cargo/guide/cargo-toml-vs-cargo-lock.html
 
@@ -32,3 +33,4 @@ abi-builds/**.txt
 stuff
 
 crates/brontes-classifier/abis/**.json
+crates/brontes-inspect/abis/**.json
