--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,6 @@ stuff
 
 crates/brontes-classifier/abis/**.json
 crates/brontes-inspect/abis/**.json
+
+/crates/brontes-core/abi_cache/sources/*
+/crates/brontes-inspect/abi_cache/sources/*
