--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,4 @@ crates/brontes-inspect/abis/**.json
 
 /crates/brontes-core/abi_cache/sources/*
 /crates/brontes-inspect/abi_cache/sources/*
+/crates/brontes-classifier/abi_cache/sources/*
