--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -37,6 +37,7 @@ alloy-sol-types.workspace = true
 alloy-primitives.workspace = true
 alloy-json-abi.workspace = true
 alloy-etherscan.workspace = true
+alloy-dyn-abi.workspace = true
 
 # ethers
 ethers-core.workspace = true
