--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -26,6 +26,7 @@ ruint = { workspace = true, features = ["primitive-types", "rlp"] }
 brontes-types.workspace = true
 brontes-metrics.workspace = true
 brontes-tracing.workspace = true
+brontes-database.workspace = true
 
 # async
 
