--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -100,6 +100,7 @@ itertools.workspace = true
 [features]
 default = []
 test_run = ["server"]
+dyn-decode = []
 tests = []
 server = []
 local = []
