--- a/crates/brontes-classifier/Cargo.toml
+++ b/crates/brontes-classifier/Cargo.toml
@@ -3,7 +3,9 @@ name = "brontes-classifier"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+[[bench]]
+name = "classifier"
+harness = false
 
 [dependencies]
 # brontes
@@ -54,6 +56,7 @@ brontes-classifier = { workspace = true, features = ["tests"] }
 brontes-core = { workspace = true, features = ["tests"] }
 brontes-database = { workspace = true, features = ["tests"] }
 reth-tracing.workspace = true
+criterion = "0.5"
 
 [build-dependencies]
 tokio.workspace = true
