--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -27,6 +27,7 @@ brontes-types.workspace = true
 brontes-metrics.workspace = true
 brontes-tracing.workspace = true
 brontes-database.workspace = true
+revm = "3.5.0"
 
 # tooling = { git = "https://github.com/SorellaLabs/tooling" }
 
