--- a/crates/reth-tracing/Cargo.toml
+++ b/crates/reth-tracing/Cargo.toml
@@ -20,6 +20,8 @@ reth-blockchain-tree.workspace = true
 reth-beacon-consensus.workspace = true
 reth-revm.workspace = true
 reth-interfaces.workspace = true
+revm-primitives = "1.3.0"
+futures.workspace = true
 
 # error
 eyre = "0.6.8"
@@ -30,3 +32,4 @@ tokio = { version = "1.28.2", features = ["full"] }
 
 [features]
 tests = []
+
