move to latest reth + update name

--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -21,13 +21,12 @@ reth-beacon-consensus.workspace = true
 #reth-revm.workspace = true
 reth-interfaces.workspace = true
 reth-metrics.workspace = true
-reth-tracing.workspace = true
+reth-tracing-ext.workspace = true
 ruint = { workspace = true, features = ["primitive-types", "rlp"] }
 brontes-types.workspace = true
 brontes-metrics.workspace = true
 brontes-tracing.workspace = true
 brontes-database.workspace = true
-revm = "3.5.0"
 
 # tooling = { git = "https://github.com/SorellaLabs/tooling" }
 
@@ -47,7 +46,7 @@ alloy-dyn-abi.workspace = true
 # ethers
 ethers-core.workspace = true
 ethers.workspace = true
-ethers-reth.workspace = true
+# ethers-reth.workspace = true
 
 # Serde 
 serde.workspace = true
@@ -80,7 +79,7 @@ brontes-core = { workspace = true, features = ["tests"] }
 
 [build-dependencies]
 tokio.workspace = true
-reth-tracing.workspace = true
+reth-tracing-ext.workspace = true
 clickhouse.workspace = true
 hyper.workspace = true
 hyper-tls.workspace = true
