--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -60,7 +60,7 @@ serial_test.workspace = true
 brontes-classifier = { workspace = true, features = ["tests"] }
 brontes-core = { workspace = true, features = ["tests"] }
 brontes-database = { workspace = true, features = ["tests"] }
-reth-tracing.workspace = true
+reth-tracing-ext.workspace = true
 
 
 [features]
