--- a/Cargo.toml
+++ b/Cargo.toml
@@ -3,7 +3,7 @@ members = [
   "crates/brontes-core",
   "crates/bin",
   "crates/alloy-etherscan",
-  "crates/reth-tracing",
+  "crates/reth-tracing-ext",
   "crates/brontes-inspect",
   "crates/brontes-types",
   "crates/brontes-classifier",
@@ -11,7 +11,7 @@ members = [
   "crates/tracing",
   "crates/brontes-database",
   "crates/brontes-macros",
-  "tests"
+  "tests",
 ]
 
 resolver = "2"
@@ -29,41 +29,41 @@ brontes-classifier = { path = "./crates/brontes-classifier/" }
 brontes-metrics = { path = "./crates/brontes-metrics/" }
 brontes-database = { path = "./crates/brontes-database/" }
 brontes-macros = { path = "./crates/brontes-macros/" }
-reth-tracing = { path = "./crates/reth-tracing/" }
+reth-tracing-ext = { path = "./crates/reth-tracing-ext/" }
 brontes-tracing = { path = "./crates/tracing" }
 
 # Ethers
 ethers-core = "2.0.10"
 ethers-solc = "2.0.10"
 ethers = "2.0.10"
-ethers-reth = { git = "https://github.com/SorellaLabs/ethers-reth.git" }
+# ethers-reth = { git = "https://github.com/SorellaLabs/ethers-reth.git" }
 
 # Reth
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "1b16d80" }
-reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "1b16d80" }
-reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "1b16d80" }
-reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "1b16d80" }
-reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "1b16d80" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "1b16d80" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "1b16d80" }
-reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "1b16d80" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "1b16d80" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "3d291ea" }
+reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "3d291ea" }
+reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "3d291ea" }
+reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "3d291ea" }
+reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "3d291ea" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "3d291ea" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "3d291ea" }
+reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "3d291ea" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "3d291ea" }
 reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", features = [
   "test-utils",
-], rev = "1b16d80" }
-reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "1b16d80" }
-reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "1b16d80" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "1b16d80" }
+], rev = "3d291ea" }
+reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "3d291ea" }
+reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "3d291ea" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "3d291ea" }
 reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = [
   "test-utils",
-], rev = "1b16d80" }
+], rev = "3d291ea" }
 reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = [
   "test-utils",
-], rev = "1b16d80" }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev = "1b16d80" }
-reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev = "1b16d80" }
-reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "1b16d80" }
-reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "1b16d80" }
+], rev = "3d291ea" }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev = "3d291ea" }
+reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev = "3d291ea" }
+reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "3d291ea" }
+reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "3d291ea" }
 
 # ruint
 ruint = "1.9.0"
@@ -86,7 +86,10 @@ async-trait = "0.1.73"
 
 #Tracing
 tracing = "0.1.37"
-tracing-subscriber = { version = "0.3.17", default-features = false, features = ["env-filter", "fmt"] }
+tracing-subscriber = { version = "0.3.17", default-features = false, features = [
+  "env-filter",
+  "fmt",
+] }
 colored = "2.0"
 
 # Metrics
@@ -109,7 +112,7 @@ reqwest = "0.11.22"
 
 # Serde
 serde = "1.0.171"
-serde_json =  "1.0.1"
+serde_json = "1.0.1"
 serde_with = "3.4.0"
 serde_repr = "0.1.16"
 
@@ -125,7 +128,7 @@ phf_codegen = "0.11.2"
 metrics = "0.21.1"
 
 # misc
-c-kzg = { git = "https://github.com/ethereum/c-kzg-4844" }
+c-kzg = "0.4.0"
 hex-literal = "0.4.1"
 rayon = "1.7.0"
 dotenv = "0.15.0"
@@ -138,7 +141,6 @@ toml = "0.8.2"
 auto_impl = "1.1.0"
 strum = "0.25.0"
 serial_test = "2.0.0"
-
 
 
 [profile.dev]
