--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -45,7 +45,7 @@ log.workspace = true
 # tracing
 tracing.workspace = true
 tracing-subscriber.workspace = true
-reth-tracing.workspace = true
+reth-tracing-ext.workspace = true
 colored.workspace = true
 
 # misc
