--- a/crates/brontes-classifier/Cargo.toml
+++ b/crates/brontes-classifier/Cargo.toml
@@ -37,14 +37,14 @@ phf.workspace = true
 itertools.workspace = true
 
 # tests feature (unique)
-reth-tracing = { workspace = true, optional = true }
+reth-tracing-ext = { workspace = true, optional = true }
 brontes-core = { workspace = true, optional = true }
 
 
 [features]
 default = []
 test_run = ["brontes-database/test_run", "server"]
-tests = ["reth-tracing", "brontes-core"]
+tests = ["reth-tracing-ext", "brontes-core"]
 server = []
 local = ["brontes-core/local"]
 
@@ -55,7 +55,7 @@ serial_test.workspace = true
 brontes-classifier = { workspace = true, features = ["tests"] }
 brontes-core = { workspace = true, features = ["tests"] }
 brontes-database = { workspace = true, features = ["tests"] }
-reth-tracing.workspace = true
+reth-tracing-ext.workspace = true
 criterion = "0.5"
 
 [build-dependencies]
@@ -75,4 +75,4 @@ reth-primitives.workspace = true
 futures.workspace = true
 itertools.workspace = true
 dotenv.workspace = true
-reth-tracing.workspace = true
+reth-tracing-ext.workspace = true
