--- a/crates/reth-tracing-ext/Cargo.toml
+++ b/crates/reth-tracing-ext/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "reth-tracing"
+name = "reth-tracing-ext"
 version = "0.1.0"
 edition = "2021"
 
@@ -20,8 +20,10 @@ reth-blockchain-tree.workspace = true
 reth-beacon-consensus.workspace = true
 reth-revm.workspace = true
 reth-interfaces.workspace = true
-revm-primitives = "1.3.0"
 futures.workspace = true
+
+revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze",  features = ["std", "secp256k1"], default-features = false }
+revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = ["std"], default-features = false }
 
 # error
 eyre = "0.6.8"
@@ -32,4 +34,3 @@ tokio = { version = "1.28.2", features = ["full"] }
 
 [features]
 tests = []
-
