--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -67,12 +67,11 @@ cfg-if = "1.0.0"
 metrics-process.workspace = true
 
 
-
 [features]
 server = [
   "brontes-types/server",
   "brontes-classifier/server",
-  "brontes-core/server"
+  "brontes-core/server",
 ]
 
 test_run = [
