--- a/Cargo.toml
+++ b/Cargo.toml
@@ -71,11 +71,11 @@ ruint = "1.9.0"
 revm-primitives = "1.1.2"
 
 # Alloy
-alloy-sol-types = { git = "https://github.com/SorellaLabs/alloy-core.git", package = "alloy-sol-types" }
-alloy-primitives = { git = "https://github.com/SorellaLabs/alloy-core.git", package = "alloy-primitives" }
-alloy-json-abi = { git = "https://github.com/SorellaLabs/alloy-core.git", package = "alloy-json-abi" }
-alloy-sol-macro = { git = "https://github.com/SorellaLabs/alloy-core.git", package = "alloy-sol-macro" }
-alloy-dyn-abi = { git = "https://github.com/SorellaLabs/alloy-core.git", package = "alloy-dyn-abi" }
+alloy-sol-types = "0.5.0"
+alloy-primitives = "0.5.0"
+alloy-json-abi = "0.5.0"
+alloy-sol-macro = "0.5.0"
+alloy-dyn-abi = "0.5.0"
 
 # Async
 tokio = "1.13.0"
