--- a/Cargo.toml
+++ b/Cargo.toml
@@ -35,7 +35,7 @@ brontes-tracing = { path = "./crates/tracing" }
 ethers-core = "2.0.10"
 ethers-solc = "2.0.10"
 ethers = "2.0.10"
-# ethers-reth = { git = "https://github.com/SorellaLabs/ethers-reth.git" }
+ethers-reth = { git = "https://github.com/SorellaLabs/ethers-reth.git" }
 
 # Reth
 reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "3d291ea" }
