--- a/crates/reth-tracing-ext/Cargo.toml
+++ b/crates/reth-tracing-ext/Cargo.toml
@@ -22,6 +22,7 @@ reth-revm.workspace = true
 reth-interfaces.workspace = true
 futures.workspace = true
 brontes-types.workspace = true
+tracing.workspace = true
 
 revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze",  features = ["std", "secp256k1"], default-features = false }
 revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = ["std"], default-features = false }
