remove source spam

--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -74,5 +74,6 @@ tests = [
   "brontes-classifier/tests",
   "brontes-inspect/tests",
 ]
+local = ["brontes-core/local"]
 
 dyn-decode = ["brontes-core/dyn-decode"]
