--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -37,7 +37,7 @@ async-trait.workspace = true
 alloy-sol-types.workspace = true
 alloy-primitives.workspace = true
 alloy-json-abi.workspace = true
-alloy-dyn-abi.workspace = true
+alloy-dyn-abi = { workspace = true, features = ["default"] }
 alloy-providers = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-transport = { git = "https://github.com/alloy-rs/alloy.git" }
