--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -74,6 +74,8 @@ dotenv.workspace = true
 [dev-dependencies]
 serial_test.workspace = true
 brontes-core = { workspace = true, features = ["tests"] }
+brontes-classifier = { workspace = true, features = ["tests"] }
+
 
 [build-dependencies]
 tokio.workspace = true
