--- a/.gitignore
+++ b/.gitignore
@@ -39,3 +39,5 @@ crates/brontes-inspect/abis/**.json
 /crates/brontes-core/abi_cache/sources/*
 /crates/brontes-inspect/abi_cache/sources/*
 /crates/brontes-classifier/abi_cache/sources/*
+
+.cargo
