--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -36,6 +36,7 @@ auto_impl.workspace = true
 alloy-primitives = { workspace = true, features = ["serde"] }
 alloy-sol-types.workspace = true
 alloy-dyn-abi.workspace = true
+parking_lot.workspace = true
 
 
 [build-dependencies]
