--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -35,6 +35,7 @@ strum = { workspace = true, features = ["derive"] }
 auto_impl.workspace = true
 alloy-primitives = { workspace = true, features = ["serde"] }
 alloy-sol-types.workspace = true
+alloy-sol-macro.workspace = true
 alloy-dyn-abi.workspace = true
 parking_lot.workspace = true
 
