--- a/crates/brontes-inspect/Cargo.toml
+++ b/crates/brontes-inspect/Cargo.toml
@@ -17,6 +17,19 @@ clickhouse = { git = "https://github.com/SorellaLabs/clickhouse.rs" }
 hyper-tls.workspace = true
 hyper.workspace = true
 
+# alloy
+alloy-sol-macro.workspace = true
+alloy-sol-types.workspace = true
+alloy-primitives.workspace = true
+alloy-json-abi.workspace = true
+alloy-providers = { git = "https://github.com/alloy-rs/alloy.git" }
+alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git" }
+alloy-transport = { git = "https://github.com/alloy-rs/alloy.git" }
+alloy-networks = { git = "https://github.com/alloy-rs/alloy.git" }
+alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git" }
+alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git" }
+alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git" }
+
 # async
 async-trait.workspace = true
 rayon.workspace = true
