--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,4 @@ crates/brontes-inspect/abis/**.json
 /crates/brontes-inspect/abi_cache/sources/*
 /crates/brontes-classifier/abi_cache/sources/*
 
-.cargo
+.cargo/
