finish basic graph
Former-commit-id: b2a135d53a9ac8689625ad622416dcd55e1a0d22

--- a/crates/brontes-database/Cargo.toml
+++ b/crates/brontes-database/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 # brontes
 brontes-types.workspace = true
+petgraph = "0.6.4"
+alloy-primitives.workspace = true
 
 alloy-json-abi = { workspace = true, features = ["serde_json"] }
 
