--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -38,6 +38,7 @@ alloy-sol-types.workspace = true
 alloy-sol-macro.workspace = true
 alloy-dyn-abi.workspace = true
 parking_lot.workspace = true
+petgraph = "0.6.4"
 
 
 [build-dependencies]
