--- a/crates/brontes-database/Cargo.toml
+++ b/crates/brontes-database/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 # brontes
 brontes-types.workspace = true
 petgraph = "0.6.4"
+itertools = "0.12.0"
 alloy-primitives.workspace = true
 
 alloy-json-abi = { workspace = true, features = ["serde_json"] }
