--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,7 +31,7 @@ brontes-database = { path = "./crates/brontes-database/" }
 brontes-macros = { path = "./crates/brontes-macros/" }
 reth-tracing-ext = { path = "./crates/reth-tracing-ext/" }
 brontes-tracing = { path = "./crates/tracing" }
-brontes-static = { path = "./crates/tracing/" }
+brontes-static = { path = "./crates/brontes-static/" }
 
 # Reth
 reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "3d291ea" }
