--- a/Cargo.toml
+++ b/Cargo.toml
@@ -62,7 +62,8 @@ reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-me
 ruint = "1.9.0"
 
 # revm
-revm-primitives = "1.1.2"
+revm-primitives = "1.3.0"
+revm = "3.5.0"
 
 # Alloy
 alloy-sol-types = "0.5.0"
