--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -5,6 +5,11 @@ edition = "2021"
 
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
+[[bench]]
+name = "parsing"
+test_harness = false
+
+
 [dependencies]
 # Reth
 reth-tasks.workspace = true
@@ -75,6 +80,10 @@ dotenv.workspace = true
 [dev-dependencies]
 serial_test.workspace = true
 brontes-core = { workspace = true, features = ["tests"] }
+dotenv.workspace = true
+tokio.workspace = true
+reth-tracing-ext.workspace = true
+criterion = "0.5"
 
 
 [build-dependencies]
