--- a/crates/brontes-classifier/Cargo.toml
+++ b/crates/brontes-classifier/Cargo.toml
@@ -41,6 +41,7 @@ serde_json.workspace = true
 parking_lot.workspace = true
 paste = "1.0.14"
 phf.workspace = true
+unstringify = "0.1.4"
 itertools.workspace = true
 
 # tests feature (unique)
@@ -52,6 +53,7 @@ brontes-core = { workspace = true, optional = true }
 default = []
 tests = ["reth-tracing-ext", "brontes-core"]
 local = ["brontes-core/local"]
+libmdbx = []
 
 [dev-dependencies]
 dotenv.workspace = true
@@ -80,3 +82,4 @@ futures.workspace = true
 itertools.workspace = true
 dotenv.workspace = true
 reth-tracing-ext.workspace = true
+
