--- a/Cargo.toml
+++ b/Cargo.toml
@@ -134,7 +134,7 @@ toml = "0.8.2"
 auto_impl = "1.1.0"
 strum = "0.25.0"
 serial_test = "2.0.0"
-
+derive_more = "0.99.17"
 
 [profile.dev]
 opt-level = 0           # No optimizations
