--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -39,7 +39,7 @@ alloy-sol-macro.workspace = true
 alloy-dyn-abi.workspace = true
 parking_lot.workspace = true
 petgraph = "0.6.4"
-
+derive_more.workspace = true    
 
 [build-dependencies]
 strum = { workspace = true, features = ["derive"] }
