--- a/crates/brontes-pricing/Cargo.toml
+++ b/crates/brontes-pricing/Cargo.toml
@@ -9,6 +9,9 @@ edition = "2021"
 #brontes 
 brontes-types.workspace = true
 
+amms = { git = "https://github.com/darkforestry/amms-rs.git" }
+futures.workspace = true
+
 # reth 
 reth-rpc-types.workspace = true
 reth-primitives.workspace = true
@@ -40,3 +43,6 @@ alloy-dyn-abi.workspace = true
 parking_lot.workspace = true
 petgraph = "0.6.4"
 derive_more.workspace = true
+ethers = "2.0.11"
+async-trait.workspace = true
+num-bigfloat = "1.7.0"
