--- a/crates/brontes-pricing/Cargo.toml
+++ b/crates/brontes-pricing/Cargo.toml
@@ -9,6 +9,8 @@ edition = "2021"
 #brontes 
 brontes-types.workspace = true
 
+itertools = "0.12.0"
+
 amms = { git = "https://github.com/darkforestry/amms-rs.git" }
 futures.workspace = true
 
