--- a/crates/bin/Cargo.toml
+++ b/crates/bin/Cargo.toml
@@ -14,6 +14,7 @@ brontes-classifier.workspace = true
 brontes-database.workspace = true
 brontes-database-libmdbx.workspace = true
 brontes-metrics.workspace = true
+brontes-pricing.workspace = true
 malachite.workspace = true
 toml = "0.8.2"
 
