--- a/crates/brontes-database/libmdbx/Cargo.toml
+++ b/crates/brontes-database/libmdbx/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 
 # brontes
 brontes-database.workspace = true
+brontes-types.workspace = true
 
 # alloy
 alloy-primitives = { workspace = true, features = ["rand", "rlp", "arbitrary", "serde"] }
