--- a/crates/brontes-database/libmdbx/Cargo.toml
+++ b/crates/brontes-database/libmdbx/Cargo.toml
@@ -11,7 +11,12 @@ edition = "2021"
 brontes-database.workspace = true
 
 # alloy
-alloy-primitives = { workspace = true, features = ["rand", "rlp", "arbitrary", "serde"] }
+alloy-primitives = { workspace = true, features = [
+  "rand",
+  "rlp",
+  "arbitrary",
+  "serde",
+] }
 alloy-rlp = { workspace = true, features = ["arrayvec"] }
 alloy-json-abi = { workspace = true, features = ["serde_json"] }
 
@@ -24,7 +29,7 @@ reth-db.workspace = true
 
 # libmdbx deps
 parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
-reth-codecs = { workspace = true, features = ["arbitrary"] }
+reth-codecs.workspace = true
 codecs-derive.workspace = true
 proptest = "1.4"
 proptest-derive = "0.4"
@@ -32,7 +37,6 @@ arbitrary = "1.3"
 rand = "0.8.5"
 modular-bitfield = "0.11.2"
 bytes = "1.5"
-
 
 
 # sorella-db
@@ -59,8 +63,6 @@ parking_lot.workspace = true
 dotenv.workspace = true
 
 
-
 [dev-dependencies]
 serial_test.workspace = true
 test-fuzz = "4"
-
