--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -9,6 +9,10 @@ edition = "2021"
 reth-rpc-types.workspace = true
 reth-primitives.workspace = true
 
+
+async-trait.workspace = true
+reth-interfaces.workspace = true
+reth-rpc.workspace = true
 # tracing
 tracing.workspace = true
 
@@ -39,7 +43,7 @@ alloy-sol-macro.workspace = true
 alloy-dyn-abi.workspace = true
 parking_lot.workspace = true
 petgraph = "0.6.4"
-derive_more.workspace = true    
+derive_more.workspace = true
 
 [build-dependencies]
 strum = { workspace = true, features = ["derive"] }
