--- a/crates/reth-tracing-ext/Cargo.toml
+++ b/crates/reth-tracing-ext/Cargo.toml
@@ -24,6 +24,8 @@ futures.workspace = true
 brontes-types.workspace = true
 tracing.workspace = true
 
+num_cpus.workspace = true   
+
 revm = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze",  features = ["std", "secp256k1"], default-features = false }
 revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "reth_freeze", features = ["std"], default-features = false }
 bitflags = "2.4"
