--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -10,6 +10,7 @@ reth-rpc-types.workspace = true
 reth-primitives.workspace = true
 
 
+reth-db.workspace = true
 async-trait.workspace = true
 reth-interfaces.workspace = true
 reth-rpc.workspace = true
