--- a/crates/brontes-pricing/Cargo.toml
+++ b/crates/brontes-pricing/Cargo.toml
@@ -60,6 +60,7 @@ arbitrary = "1.3"
 rand = "0.8.5"
 modular-bitfield = "0.11.2"
 bytes = "1.5"
+eyre.workspace = true
 
 [features]
 uni-v3-ticks =[]
