--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -47,6 +47,7 @@ alloy-rlp.workspace = true
 parking_lot.workspace = true
 petgraph = "0.6.4"
 derive_more.workspace = true
+dyn-clone = "1.0.16"
 
 [build-dependencies]
 strum = { workspace = true, features = ["derive"] }
