--- a/crates/brontes-types/Cargo.toml
+++ b/crates/brontes-types/Cargo.toml
@@ -48,6 +48,7 @@ parking_lot.workspace = true
 petgraph = "0.6.4"
 derive_more.workspace = true
 dyn-clone = "1.0.16"
+itertools.workspace = true
 
 [build-dependencies]
 strum = { workspace = true, features = ["derive"] }
