--- a/crates/brontes-database/libmdbx/Cargo.toml
+++ b/crates/brontes-database/libmdbx/Cargo.toml
@@ -11,6 +11,8 @@ edition = "2021"
 brontes-database.workspace = true
 brontes-types.workspace = true
 brontes-pricing.workspace = true
+reth-tracing-ext.workspace = true
+
 tracing.workspace = true
 
 # alloy
@@ -29,6 +31,7 @@ reth-primitives.workspace = true
 reth-interfaces.workspace = true
 reth-libmdbx.workspace = true
 reth-db.workspace = true
+reth-rpc.workspace = true
 
 # libmdbx deps
 parity-scale-codec = { version = "3.2.1", features = ["derive", "bytes"] }
@@ -40,6 +43,7 @@ arbitrary = "1.3"
 rand = "0.8.5"
 modular-bitfield = "0.11.2"
 bytes = "1.5"
+zstd = "0.13"
 
 
 # numbers
