almost done tests

--- a/crates/brontes-pricing/Cargo.toml
+++ b/crates/brontes-pricing/Cargo.toml
@@ -3,7 +3,10 @@ name = "brontes-pricing"
 version = "0.1.0"
 edition = "2021"
 
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+
+[[bench]]
+name = "graph"
+harness = false
 
 [dependencies]
 #brontes 
@@ -68,11 +71,12 @@ brontes-core = { workspace = true, features = ["tests"] }
 brontes-classifier = { workspace = true, features = ["tests"] }
 brontes-inspect.workspace = true
 brontes-types.workspace = true
-brontes-database.workspace = true 
+brontes-database.workspace = true
 brontes-database-libmdbx.workspace = true
 dotenv.workspace = true
 tokio.workspace = true
 reth-tracing-ext.workspace = true
+criterion = { version = "0.5" }
 
 [features]
 uni-v3-ticks = []
