--- a/crates/brontes-core/Cargo.toml
+++ b/crates/brontes-core/Cargo.toml
@@ -51,7 +51,7 @@ alloy-dyn-abi = { workspace = true, features = ["default"] }
 alloy-providers = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-transport = { git = "https://github.com/alloy-rs/alloy.git" }
-alloy-networks = { git = "https://github.com/alloy-rs/alloy.git" }
+alloy-network = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git" }
