--- a/Cargo.toml
+++ b/Cargo.toml
@@ -36,47 +36,54 @@ reth-tracing-ext = { path = "./crates/reth-tracing-ext/" }
 brontes-tracing = { path = "./crates/tracing" }
 
 # Reth
-reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "ee3c4eb" }
-reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "ee3c4eb" }
-reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "ee3c4eb" }
-reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "ee3c4eb" }
-reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "ee3c4eb" }
-reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "ee3c4eb" }
-reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "ee3c4eb" }
-reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "ee3c4eb" }
-reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "ee3c4eb" }
-reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "ee3c4eb" }
-reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "ee3c4eb" }
-reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "ee3c4eb" }
-reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "ee3c4eb" }
+reth-tasks = { git = "https://github.com/paradigmxyz/reth", package = "reth-tasks", rev = "43cdd73" }
+reth-rpc = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc", rev = "43cdd73" }
+reth-rpc-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-api", rev = "43cdd73" }
+reth-rpc-types = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-types", rev = "43cdd73" }
+reth-rpc-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-rpc-builder", rev = "43cdd73" }
+reth-provider = { git = "https://github.com/paradigmxyz/reth", package = "reth-provider", rev = "43cdd73" }
+reth-transaction-pool = { git = "https://github.com/paradigmxyz/reth", package = "reth-transaction-pool", rev = "43cdd73" }
+reth-network-api = { git = "https://github.com/paradigmxyz/reth", package = "reth-network-api", rev = "43cdd73" }
+reth-primitives = { git = "https://github.com/paradigmxyz/reth", package = "reth-primitives", rev = "43cdd73" }
+reth-db = { git = "https://github.com/paradigmxyz/reth", package = "reth-db", rev = "43cdd73" }
+reth-blockchain-tree = { git = "https://github.com/paradigmxyz/reth", package = "reth-blockchain-tree", rev = "43cdd73" }
+reth-beacon-consensus = { git = "https://github.com/paradigmxyz/reth", package = "reth-beacon-consensus", rev = "43cdd73" }
+reth-revm = { git = "https://github.com/paradigmxyz/reth", package = "reth-revm", rev = "43cdd73" }
 reth-interfaces = { git = "https://github.com/paradigmxyz/reth", package = "reth-interfaces", features = [
   "test-utils",
-], rev = "ee3c4eb" }
+], rev = "43cdd73" }
 reth-stages = { git = "https://github.com/paradigmxyz/reth", package = "reth-stages", features = [
   "test-utils",
-], rev = "ee3c4eb" }
-reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev = "ee3c4eb" }
-reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", package = "reth-libmdbx", rev = "ee3c4eb" }
-reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev = "ee3c4eb" }
-reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "ee3c4eb" }
-reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "ee3c4eb" }
-reth-codecs = { git = "https://github.com/paradigmxyz/reth", package = "reth-codecs", rev = "ee3c4eb" }
-codecs-derive = { git = "https://github.com/paradigmxyz/reth", package = "codecs-derive", rev = "ee3c4eb" }
+], rev = "43cdd73" }
+reth-trie = { git = "https://github.com/paradigmxyz/reth", package = "reth-trie", rev = "43cdd73" }
+reth-libmdbx = { git = "https://github.com/paradigmxyz/reth", package = "reth-libmdbx", rev = "43cdd73" }
+reth-eth-wire = { git = "https://github.com/paradigmxyz/reth", package = "reth-eth-wire", rev = "43cdd73" }
+reth-payload-builder = { git = "https://github.com/paradigmxyz/reth", package = "reth-payload-builder", rev = "43cdd73" }
+reth-metrics = { git = "https://github.com/paradigmxyz/reth", package = "reth-metrics", rev = "43cdd73" }
+reth-codecs = { git = "https://github.com/paradigmxyz/reth", package = "reth-codecs", rev = "43cdd73" }
+codecs-derive = { git = "https://github.com/paradigmxyz/reth", package = "codecs-derive", rev = "43cdd73" }
 
 # ruint
 ruint = "1.9.0"
 
 # revm
-revm-primitives = "1.3.0"
-revm = "3.5.0"
+revm = { git = "https://github.com/bluealloy/revm", branch = "main", features = [
+  "std",
+  "secp256k1",
+], default-features = false }
+revm-primitives = { git = "https://github.com/bluealloy/revm", branch = "main", features = [
+  "std",
+], default-features = false }
+
 
 # Alloy
-alloy-sol-types = "0.5.0"
-alloy-primitives = "0.5.0"
-alloy-json-abi = "0.5.0"
-alloy-sol-macro = "0.5.0"
-alloy-dyn-abi = "0.5.0"
-alloy-rlp = "0.3"
+alloy-sol-types = { version = "0.6.0", features = ["json"] }
+alloy-sol-macro = { version = "0.6.0", features = ["json"] }
+alloy-rlp = { version = "0.3.4" }
+alloy-rlp-derive = { version = "0.3.4" }
+alloy-primitives = { version = "0.6.0", features = ["rlp"] }
+alloy-json-abi = "0.6.0"
+alloy-dyn-abi = "0.6.0"
 
 # Async
 tokio = "1.13.0"
