--- a/crates/brontes-classifier/Cargo.toml
+++ b/crates/brontes-classifier/Cargo.toml
@@ -24,7 +24,7 @@ alloy-sol-macro = { workspace = true, features = ["json"] }
 alloy-providers = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-transport = { git = "https://github.com/alloy-rs/alloy.git" }
-alloy-networks = { git = "https://github.com/alloy-rs/alloy.git" }
+alloy-network = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git" }
