--- a/crates/brontes-inspect/Cargo.toml
+++ b/crates/brontes-inspect/Cargo.toml
@@ -26,7 +26,7 @@ alloy-json-abi.workspace = true
 alloy-providers = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-transport-http = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-transport = { git = "https://github.com/alloy-rs/alloy.git" }
-alloy-networks = { git = "https://github.com/alloy-rs/alloy.git" }
+alloy-network = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-json-rpc = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-rpc-types = { git = "https://github.com/alloy-rs/alloy.git" }
 alloy-rpc-client = { git = "https://github.com/alloy-rs/alloy.git" }
