--- a/crates/brontes-pricing/Cargo.toml
+++ b/crates/brontes-pricing/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 [[bench]]
 name = "graph"
 harness = false
+required-features = ["benchmarking"]
 
 [dependencies]
 #brontes 
@@ -77,6 +78,8 @@ dotenv.workspace = true
 tokio.workspace = true
 reth-tracing-ext.workspace = true
 criterion = { version = "0.5" }
+rand = "0.8.5"
 
 [features]
 uni-v3-ticks = []
+benchmarking = []
