--- a/crates/brontes-pricing/Cargo.toml
+++ b/crates/brontes-pricing/Cargo.toml
@@ -41,6 +41,10 @@ serde_with.workspace = true
 serde_repr.workspace = true
 alloy-rlp = { workspace = true, features = ["arrayvec"] }
 
+# pathfinding 
+pathfinding = "4.8.1"
+rustc-hash = "1.1.0"
+indexmap = "2.1.0"
 
 # misc
 phf.workspace = true
