moved error types
Former-commit-id: 268e52bd326493ee234103c46a22e99bd4a22526

--- a/.gitignore
+++ b/.gitignore
@@ -42,6 +42,8 @@ crates/brontes-inspect/abis/**.json
 /crates/brontes-inspect/abi_cache/sources/*
 /crates/brontes-classifier/abi_cache/sources/*
 
+/crates/brontes-database/**/**.parquet
+
 .cargo/
 
 data/db/*
