--- a/crates/brontes-database/libmdbx/Cargo.toml
+++ b/crates/brontes-database/libmdbx/Cargo.toml
@@ -78,12 +78,15 @@ eyre.workspace = true
 paste = "1.0.14"
 parking_lot.workspace = true
 dotenv.workspace = true
+owned_chunks = "0.1.1"
+bincode = "2.0.0-rc.3"
 
 # benches
 criterion = "0.5"
 parquet = "50"
 arrow = "50"
-
+human_bytes = "0.4.3"
+rkyv= {version = "0.7", features = ["validation"] }
 
 [dev-dependencies]
 serial_test.workspace = true
