Finished the complex classification for flashloans
Former-commit-id: f990375a2827976ef72acdae01b6626e2de2db37

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,4 @@
 {
-    "rust-analyzer.files.excludeDirs": [
-        "abi_builds"
-    ]
+  "rust-analyzer.files.excludeDirs": ["abi_builds"],
+  "cSpell.words": ["flashloan"]
 }
